microservices/nginx/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: dev
spec:
  type: ClusterIP
  # type: LoadBalancer
  selector:
    app.kubernetes.io/instance: nginx
  ports:
  - port: 80
    targetPort: 80
